[project]
name = "my-agno-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.14",
    "duckduckgo-search>=8.1.1",
    "google-genai>=2.8.0",
    "lancedb>=0.33.0",
    "pandas>=3.0.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tantivy>=0.26.0",
    "yfinance>=1.4.1",
]